@@ -236,13 +236,18 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.13.0</version>
+                    <configuration>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
                     <configuration>
-                        <argLine>@{argLine} -Xmx2g -Xss4m</argLine>
+                        <argLine>@{argLine} -Xmx2g -Xss4m --enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
